--- a/app/src/main/res/xml/motion_scene.xml
+++ b/app/src/main/res/xml/motion_scene.xml
@@ -61,7 +61,7 @@
                 motion:motionTarget="@id/sun" />
         </KeyFrameSet>
 
-        <!-- Change background color -->
+        <!-- Change the background color -->
         <KeyFrameSet>
             <KeyAttribute
                 motion:framePosition="0"
